# vignette

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  description.txt  pyproject.toml  setup.cfg  setup.py  test.py  test_thumbnail.py  thumbnail.py  update-version.sh  vignette.py
docs/: Makefile  conf.py  index.rst
tools/: thumbnails_lint.py
vignette/: __init__.py
