[metadata]
name = vignette
version = attr: vignette.__version__

description = Library to create FreeDesktop-compatible thumbnails
long_description = file: description.txt

url = https://github.com/hydrargyrum/vignette

license = WTFPLv2
author = Hg
author_email = dev@indigo.re

classifier =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: Public Domain
	Topic :: Desktop Environment
	Topic :: Multimedia :: Graphics
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

keywords = freedesktop, xdg, image, thumbnail, thumbnails, cache

[options]
packages = find:
zip_safe = 1
python_requires= >=3

[options.entry_points]
console_scripts =
    vignette=vignette:main

[options.extras_require]
Pillow = Pillow
PythonMagick = PythonMagick
magic = python-magic

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1
